@@ -69,7 +69,7 @@ public:
             VkTimeDomainEXT data[4];
             _vkGetPhysicalDeviceCalibrateableTimeDomainsEXT( physdev, &num, data );
             VkTimeDomainEXT supportedDomain = VK_TIME_DOMAIN_MAX_ENUM_EXT;
-#if defined _WIN32 || defined __CYGWIN__
+#if defined _WIN32
             supportedDomain = VK_TIME_DOMAIN_QUERY_PERFORMANCE_COUNTER_EXT;
 #elif defined __linux__ && defined CLOCK_MONOTONIC_RAW
             supportedDomain = VK_TIME_DOMAIN_CLOCK_MONOTONIC_RAW_EXT;
@@ -155,7 +155,7 @@ public:
             }
             m_deviation = minDeviation * 3 / 2;
 
-#if defined _WIN32 || defined __CYGWIN__
+#if defined _WIN32
             m_qpcToNs = int64_t( 1000000000. / GetFrequencyQpc() );
 #endif
 
@@ -304,7 +304,7 @@ private:
         }
         while( deviation > m_deviation );
 
-#if defined _WIN32 || defined __CYGWIN__
+#if defined _WIN32
         tGpu = ts[0];
         tCpu = ts[1] * m_qpcToNs;
 #elif defined __linux__ && defined CLOCK_MONOTONIC_RAW
