@@ -1,7 +1,7 @@
 #ifndef __TRACYTHREAD_HPP__
 #define __TRACYTHREAD_HPP__
 
-#if defined _WIN32 || defined __CYGWIN__
+#if defined _WIN32
 #  include <windows.h>
 #else
 #  include <pthread.h>
@@ -25,7 +25,7 @@ public:
     }
 };
 
-#if defined _WIN32 || defined __CYGWIN__
+#if defined _WIN32
 
 class Thread
 {
