@@ -14,7 +14,7 @@
 #ifdef _MSC_VER
 #  define stat64 _stat64
 #endif
-#if defined __CYGWIN__ || defined __APPLE__
+#if defined __APPLE__
 #  define stat64 stat
 #endif
 
