@@ -384,7 +384,7 @@ Moreover, the following platforms are not supported due to how secretive their o
 \item Google Stadia
 \end{itemize}
 
-You may also try your luck with Cygwin or Mingw, but don't get your hopes too high. These platforms were usable some time ago, but nobody is actively working on resolving any issues you might encounter with them.
+You may also try your luck with Mingw, but don't get your hopes too high. This platform was usable some time ago, but nobody is actively working on resolving any issues you might encounter with it.
 
 \subsection{Initial client setup}
 \label{initialsetup}
