@@ -13,9 +13,6 @@ SRC := \
 
 OBJ := $(SRC:%.cpp=%.o)
 
-ifeq ($(shell uname -o),Cygwin)
-LIBS += -ldbghelp
-endif
 ifeq ($(shell uname -o),FreeBSD)
 LIBS += -lexecinfo
 endif
