@@ -6,7 +6,9 @@ here.
 v0.x.x (xxxx-xx-xx)
 -------------------
 
-- Cygwin and Mingw are deprecated due to lack of interest.
+- Support for Cygwin has been dropped. It was not working for a very long
+  time and nobody had complained about it.
+- Mingw is deprecated due to lack of interest.
 - Added TRACY_NO_CALLSTACK_INLINES macro to disable inline functions
   resolution in call stacks on Windows.
 - Limited client query response rate.
